celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery4geonode
          image: geonode/geonode:latest-ubuntu-22.04
          ports:
            - containerPort: 8000
