django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django4geonode
          image: geonode/geonode:latest-ubuntu-22.04
          ports:
            - containerPort: 8000
