geoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoserver
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      containers:
        - name: geoserver4geonode
          image: geonode/geoserver:2.23.0
          ports:
            - containerPort: 8080
