celery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery
spec:
  selector:
    app: celery
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
