ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geonode-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: geonode
            port:
              number: 8000
